--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,9 +32,6 @@ h1,h2,h3,h4,h5,p{
  border: 1px dotted #4680ff;
  padding: 10px;
 }
-.borderRds{
-  border-radius: 100px;
-}
-.cursor{
-  cursor: pointer;
+.border:hover{
+  border: 2px dotted #4680ff;
 }
