--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,7 +2,7 @@ body {
   font-family: monospace;
   margin: 0;
   background-color: #fff;
-  background-image: linear-gradient(180deg, #FF007F, #fff);
+  background-image: linear-gradient(180deg, #F5F5F5, #fff);
   background-repeat: no-repeat;
 }
 button{
