--- a/article/style.css
+++ b/article/style.css
@@ -1,38 +1,63 @@
      body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
-        }
-        #content {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background: #f9f9f9;
-        }
-        h1, h2, h3 {
-            color: #333;
-        }
-        pre {
-            background: #272822;
-            color: #00ff1a;
-            padding: 10px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-        code {
-            font-family: monospace;
-        }
-        .bottom{
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 50px;
-            background-color: #ff46a6;
-            color: white;
-            text-align: center;
-            line-height: 50px;
-        }
+       font-family: Arial, sans-serif;
+       background-color: #f4f4f4;
+       color: #333;
+       line-height: 1.6;
+     }
+     
+     #content {
+       max-width: 800px;
+       margin: 20px auto;
+       padding: 20px;
+       border: 1px solid #ddd;
+       border-radius: 5px;
+       background: #f9f9f9;
+     }
+     
+     h1,
+     h2,
+     h3 {
+       color: #333;
+     }
+     
+     pre {
+       background: #272822;
+       color: #00ff1a;
+       padding: 10px;
+       border-radius: 5px;
+       overflow-x: auto;
+     }
+     
+     code {
+       font-family: monospace;
+     }
+     
+     .bottom {
+       position: fixed;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       height: 50px;
+       background-color: #ff46a6;
+       color: white;
+       text-align: center;
+       line-height: 50px;
+     }
+     
+
+
+.imgs {
+  height: 300px;
+  width: 100%;
+  background-image: linear-gradient(#00C8FF, rgba(255, 0, 124, 1));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  border-radius: 10px;
+}
+.imgs h1{
+  color: #fff;
+}
